configuring MaxPerm space